WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98247
REGRESSION(130231): Causes 3 complex font test failures on EFL / Harfbuzz+Freetype
https://bugs.webkit.org/show_bug.cgi?id=98247
Summary
REGRESSION(130231): Causes 3 complex font test failures on EFL / Harfbuzz+Fre...
Dominik Röttsches (drott)
Reported
2012-10-03 02:44:04 PDT
r130231
introduced 3 test failures on EFL which has Harfbuzz NG + Freetype enabled. I am attaching a test result difference here.
Attachments
Test Failures after r130231
(83.66 KB, application/zip)
2012-10-03 02:45 PDT
,
Dominik Röttsches (drott)
no flags
Details
Patch
(2.01 KB, patch)
2012-10-03 02:45 PDT
,
Kenichi Ishibashi
no flags
Details
Formatted Diff
Diff
Fix missing resource unlock
(2.01 KB, patch)
2012-10-03 02:59 PDT
,
Kenichi Ishibashi
no flags
Details
Formatted Diff
Diff
Patch
(4.68 KB, patch)
2012-10-03 03:35 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
Patch
(4.74 KB, patch)
2012-10-11 07:15 PDT
,
Dominik Röttsches (drott)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2012-10-03 02:45:49 PDT
Created
attachment 166836
[details]
Test Failures after
r130231
Looks like at least one combined glyph for the apostroph over e in "Lorém ipsum" is failing. The pixel results for the other two pass with failed hash but passed pixel difference under the threshold - text diff show small differences.
Kenichi Ishibashi
Comment 2
2012-10-03 02:45:53 PDT
Created
attachment 166837
[details]
Patch
Kenichi Ishibashi
Comment 3
2012-10-03 02:47:01 PDT
(In reply to
comment #2
)
> Created an attachment (id=166837) [details] > Patch
Dominik, Could you try the patch? I didn't compile it(I don't have efl port build environment).
Kenichi Ishibashi
Comment 4
2012-10-03 02:59:29 PDT
Created
attachment 166841
[details]
Fix missing resource unlock
Dominik Röttsches (drott)
Comment 5
2012-10-03 03:35:24 PDT
Created
attachment 166847
[details]
Patch
Dominik Röttsches (drott)
Comment 6
2012-10-03 08:27:42 PDT
(In reply to
comment #5
)
> Created an attachment (id=166847) [details] > Patch
Updated the patch - works for me (TM) and fixes the issue on EFL. I decorated it with Changelogs - ready for landing IMHO, LGTM.
WebKit Review Bot
Comment 7
2012-10-11 06:43:48 PDT
Comment on
attachment 166847
[details]
Patch Rejecting
attachment 166847
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: z 3. patching file Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/efl/TestExpectations Hunk #1 FAILED at 1496. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/efl/TestExpectations.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Kenneth Ro..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/14256545
Dominik Röttsches (drott)
Comment 8
2012-10-11 07:15:26 PDT
Created
attachment 168223
[details]
Patch
WebKit Review Bot
Comment 9
2012-10-11 07:38:39 PDT
Comment on
attachment 168223
[details]
Patch Clearing flags on attachment: 168223 Committed
r131058
: <
http://trac.webkit.org/changeset/131058
>
WebKit Review Bot
Comment 10
2012-10-11 07:38:44 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 11
2012-10-11 08:38:51 PDT
Appears to have broken EFL build: /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp: In member function ‘bool WebCore::SimpleFontData::canRenderCombiningCharacterSequence(const UChar*, size_t) const’: /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:184:36: error: ‘WTF::HashTableIterator<WTF::String, WTF::KeyValuePair<WTF::String, bool>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, bool> >, WTF::StringHash, WTF::HashMapValueTraits<WTF::HashTraits<WTF::String>, WTF::HashTraits<bool> >, WTF::HashTraits<WTF::String> >::ValueType’ has no member named ‘second’ /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:198:29: error: ‘WTF::HashTableIterator<WTF::String, WTF::KeyValuePair<WTF::String, bool>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, bool> >, WTF::StringHash, WTF::HashMapValueTraits<WTF::HashTraits<WTF::String>, WTF::HashTraits<bool> >, WTF::HashTraits<WTF::String> >::ValueType’ has no member named ‘second’ /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:201:32: error: ‘WTF::HashTableIterator<WTF::String, WTF::KeyValuePair<WTF::String, bool>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, bool> >, WTF::StringHash, WTF::HashMapValueTraits<WTF::HashTraits<WTF::String>, WTF::HashTraits<bool> >, WTF::HashTraits<WTF::String> >::ValueType’ has no member named ‘second’ /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:202:1: warning: control reaches end of non-void function [-Wreturn-type] make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/platform/graphics/freetype/SimpleFontDataFreeType.cpp.o] Error 1
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug