REGRESSION(130231): Causes 3 complex font test failures on EFL / Harfbuzz+Freetype https://bugs.webkit.org/show_bug.cgi?id=98247

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Implement canRenderCombiningCharacterSequence() for the Freetype case.

No new tests, covered by existing tests. Actually the lack of the implementation made
fast/text/atsui-multiple-renderers.html,  fast/text/atsui-spacing-features.html and
fast/text/wide-zero-width-space.html fail on EFL.

* platform/graphics/freetype/SimpleFontDataFreeType.cpp: Implement canRenderCombiningCharacterSequence().
(WebCore::SimpleFontData::canRenderCombiningCharacterSequence):

LayoutTests:

Removing temporary failures of complex font cases.

* platform/efl/TestExpectations:


git-svn-id: svn://svn.chromium.org/blink/trunk@131058 bbb929c8-8fbe-4397-9dbb-9b2b20218538