third_party/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp
@@ -43,7 +43,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <cairo-ft.h>
 #include <cairo.h>
 #include <fontconfig/fcfreetype.h>
+#include <unicode/normlzr.h>
 #include <wtf/MathExtras.h>
+#include <wtf/unicode/Unicode.h>
 
 namespace WebCore {
 
@@ -173,9 +175,31 @@ float SimpleFontData::platformWidthForGlyph(Glyph glyph) const
 }
 
 #if USE(HARFBUZZ_NG)
-bool SimpleFontData::canRenderCombiningCharacterSequence(const UChar*, size_t) const
+bool SimpleFontData::canRenderCombiningCharacterSequence(const UChar* characters, size_t length) const
 {
-    return false;
+    if (!m_combiningCharacterSequenceSupport)
+        m_combiningCharacterSequenceSupport = adoptPtr(new HashMap<String, bool>);
+
+    WTF::HashMap<String, bool>::AddResult addResult = m_combiningCharacterSequenceSupport->add(String(characters, length), false);
+    if (!addResult.isNewEntry)
+        return addResult.iterator->second;
+
+    UErrorCode error = U_ZERO_ERROR;
+    Vector<UChar, 4> normalizedCharacters(length);
+    int32_t normalizedLength = unorm_normalize(characters, length, UNORM_NFC, UNORM_UNICODE_3_2, &normalizedCharacters[0], length, &error);
+    // Can't render if we have an error or no composition occurred.
+    if (U_FAILURE(error) || (static_cast<size_t>(normalizedLength) == length))
+        return false;
+
+    FT_Face face = cairo_ft_scaled_font_lock_face(m_platformData.scaledFont());
+    if (!face)
+        return false;
+
+    if (FcFreeTypeCharIndex(face, normalizedCharacters[0]))
+        addResult.iterator->second = true;
+
+    cairo_ft_scaled_font_unlock_face(m_platformData.scaledFont());
+    return addResult.iterator->second;
 }
 #endif
 
